Add missing JavaDoc & update documentation